# multiplatform-collector

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Collectors/: CpuCollector.cpp  MemoryCollector.cpp
src/Collectors/include/: Collector.h  CpuCollector.h  MemoryCollector.h
